<resources>
    <string name="app_name">ExamenFinall</string>
    <string name="lbl_usuario">Usuario</string>
    <string name="lbl_contrasena">Contraseña</string>
    <string name="lbl_ingresar">INGRESAR</string>
    <string name="lbl_registrarse">Registrarse Ahora</string>

    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Cerra Sesión</string>

    <string name="menu_home">Lista de Productos</string>
    <string name="menu_gallery">Lista de Pedidos</string>
    <string name="menu_slideshow">Cerrar Sesion</string>
    <string name="lbl_olvidecontrasenia">Olvidé mi Contraseña</string>
    <string name="lbl_tituloLogin">Inisiar Sesión</string>
    <string name="lbl_detalleProducto">Detalle Producto</string>
    <string name="lbl_carritocompras">Carrito de Compras</string>
    <string name="lbl_correo">Correo</string>
    <string name="lbl_recuperar_contrasenia">Recuerar Contraseña</string>
    <string name="lbl_nombre">Nombre</string>
    <string name="lbl_apellido">Apellido</string>
    <string name="lbl_direccion">Dirección</string>
    <string name="lbl_repcontrasenia">Rep. Contraseña</string>
    <string name="lbl_registrarUsuario">Registrase ahora</string>
    <string name="lbl_telefono">Telefono</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_examen">ExamenActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_detalle_producto">DetalleProductoActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="title_activity_detalle_pedido">DetallePedidoActivity</string>
    <string name="btn_agregar_carrito">Agregar al Carrito</string>
    <string name="btnrealizarpedido">REALIZAR PEDIDO</string>
    <string name="btnregresarlistaproductos">REGRESAR</string>
</resources>